// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Password Form renders Change Password Form 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23"
    >
      Change Password
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34"
        data-shrink={false}
        htmlFor={undefined}
      >
        Current Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="currentPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34"
        data-shrink={false}
        htmlFor={undefined}
      >
        New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="newPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34"
        data-shrink={false}
        htmlFor={undefined}
      >
        Confirm New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="confirmNewPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root-81 MuiButtonBase-disabled-82 MuiButton-root-55 MuiButton-text-57 MuiButton-outlined-63 MuiButton-sizeSmall-78 MuiButton-disabled-75"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginRight": 10,
          "marginTop": 30,
        }
      }
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-56"
      >
        Change Password
      </span>
    </button>
  </form>
</div>
`;

exports[`Change Password Form renders Change Password with isChangingPassword as true 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23"
    >
      Change Password
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34"
        data-shrink={false}
        htmlFor={undefined}
      >
        Current Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="currentPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34"
        data-shrink={false}
        htmlFor={undefined}
      >
        New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="newPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34"
        data-shrink={false}
        htmlFor={undefined}
      >
        Confirm New Password
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputType-53"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="confirmNewPassword"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root-81 MuiButtonBase-disabled-82 MuiButton-root-55 MuiButton-text-57 MuiButton-outlined-63 MuiButton-sizeSmall-78 MuiButton-disabled-75"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginRight": 10,
          "marginTop": 30,
        }
      }
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-56"
      >
        <div
          className="MuiCircularProgress-root-84 MuiCircularProgress-colorPrimary-87 MuiCircularProgress-indeterminate-86"
          role="progressbar"
          style={
            Object {
              "height": 22,
              "width": 22,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-89"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-90 MuiCircularProgress-circleIndeterminate-92"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </span>
    </button>
  </form>
</div>
`;
